# fastapi-uv-template

./: .env.template  .gitignore  .ruff.toml  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/app/: config.py  main.py
src/core/: app.py  logging.py
src/core/middleware/: logging.py
src/core/middleware/logging/: config.py  logging.py
src/core/middleware/rate_limiting/: models.py  redis_client.py  redis_rate_limiter.py
src/core/routers/: health.py
tests/: conftest.py
tests/core/routers/: test_health.py
